<!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Verb Practice</string>
    <string name="title_options">Options</string>
    <string name="title_practice">Practice</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_results">Results</string>
    <string name="title_wordsearch">Wordsearch</string>
    <string name="title_crossword">Crossword</string>

    <string name="verb_pool">Verb Pool</string>
    <string name="selected_verbs">Selected verbs</string>
    <string name="top_100_verbs">Top 100 verbs</string>
    <string name="top_500_verbs">Top 500 verbs</string>
    <string name="top_2000_verbs">Top 2000 verbs</string>
    <string name="all_verbs">All verbs</string>

    <string name="verb_types">Verb Types</string>
    <string name="all_verb_types">All verb types</string>
    <string name="ar_verbs">-ar verbs</string>
    <string name="er_verbs">-er verbs</string>
    <string name="ir_verbs">-ir verbs</string>
    <string name="irreg_verbs">Irregular verbs</string>

    <string name="verb_subtypes">Verb Sub-types</string>
    <string name="all_subtypes">All verb sub-types</string>
    <string name="regular_verbs">Regular verbs</string>
    <string name="radical_verbs">Radical changing verbs</string>
    <string name="orthographic_verbs">Orthographic changing verbs</string>

    <string name="practice_mode">Practice Mode</string>
    <string name="quiz">Quiz</string>
    <string name="wordsearch">Wordsearch</string>
    <string name="crossword">Crossword</string>

    <string name="play_again">Play Again</string>
    <string name="return_home">Return Home</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="portugal">Portugal</string>
    <string name="brazil">Brazil</string>
    <string name="port_or_brazil">Location Settings</string>

    <string name="tense">Tense:</string>
    <string name="verb">Verb:</string>
    <string name="enVerb">-</string>

    // tenses
    <string name="verb_tenses">Verb Tenses</string>
    <string name="full_or_partial_conjugations">Full or Partial Conjugations</string>
    <string name="full_conjugations">Full Conjugations</string>
    <string name="partial_conjugations">Partial Conjugations</string>

    <string name="indicative_tenses">Simple Indicative Tenses</string>
    <string name="set_simp_ind_tenses">Set Simple Indicative Tenses</string>
    <string name="present">Present</string>
    <string name="imperfect">Imperfect</string>
    <string name="preterite">Preterite</string>
    <string name="simple_pluperfect">Simple Pluperfect</string>
    <string name="simple_future">Simple Future</string>
    <string name="conditional">Conditional</string>

    <string name="perfect_compound_tenses">Compound Indicative Tenses</string>
    <string name="set_comp_ind_tenses">Set Compound Indicative Tenses</string>
    <string name="future">Future</string>
    <string name="present_perfect">Present Perfect</string>
    <string name="pluperfect">Pluperfect</string>
    <string name="future_perfect">Future Perfect</string>
    <string name="conditional_perfect">Conditional Perfect</string>
    <string name="past_intent">Imperfect</string>

    <string name="progressive_tenses">Progressive Indicative Tenses</string>
    <string name="set_prog_ind_tenses">Set Progressive Indicative Tenses</string>
    <string name="present_progressive">Present Progressive</string>
    <string name="imperfect_progressive">Imperfect Progressive</string>
    <string name="preterite_progressive">Preterite Progressive</string>
    <string name="simple_pluperfect_progressive">Simple Pluperfect Progressive</string>
    <string name="future_progressive">Future Progressive</string>
    <string name="conditional_progressive">Conditional Progressive</string>
    <string name="present_perfect_progressive">Present Perfect Progressive</string>
    <string name="pluperfect_progressive">Pluperfect Progressive</string>
    <string name="future_perfect_progressive">Future Perfect Progressive</string>
    <string name="conditional_perfect_progressive">Conditional Perfect Progressive</string>

    <string name="subjunctive_tenses">Subjunctive Tenses</string>
    <string name="set_subj_tenses">Set Subjunctive Tenses</string>
    <string name="present_subjunctive">Present Subjunctive</string>
    <string name="imperfect_subjunctive">Imperfect Subjunctive</string>
    <string name="future_subjunctive">Future Subjunctive</string>
    <string name="present_perfect_subjunctive">Present Perfect Subjunctive</string>
    <string name="pluperfect_subjunctive">Pluperfect Subjunctive</string>
    <string name="future_perfect_subjunctive">Future Perfect Subjunctive</string>

    <string name="imperative_affirmative">Imperative Affirmative</string>
    <string name="imperative_negative">Imperative Negative</string>
    <string name="personal_infinitive">Personal Infinitive</string>

    <string name="search_hint">Search for verb</string>
    <string name="enter_translation"> </string>

    <string name="subject_pronoun_frequency">Subject Pronoun Frequency</string>
    <string name="eu">Eu</string>
    <string name="tu">Tu</string>
    <string name="vc_ele_ela">Você/Ele/Ela</string>
    <string name="nós">Nós</string>
    <string name="vós">Vós</string>
    <string name="vcs_eles_elas" tools:ignore="Typos">Vocês/Eles/Elas</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="check">Check</string>
    <string name="finish">Finish</string>
    <string name="restart">Restart</string>
    <string name="show_answers">Show Answers</string>
    <string name="show_answer">Show</string>
    <string name="reset_all_words">Reset All Words</string>
    <string name="filter">Set Verb Filter</string>
    <string name="explain_options">Explain Options</string>
    <string name="explain_simple_indicative_tenses">Explain Simple Indicative Tenses</string>
    <string name="explain_compound_indicative_tenses">Explain Compound Indicative Tenses</string>
    <string name="explain_progressive_indicative_tenses">Explain Progressive Indicative Tenses</string>
    <string name="explain_subjunctive_tenses">Explain Subjunctive Tenses</string>
    <string name="go_to_next_hint">Go to next Hint</string>
    <string name="switch_orientation">Switch Orientation</string>

    <string name="show_selected">Selected Verbs</string>
    <string name="selected">Show Selected</string>
    <string name="unselected">Show Unselected</string>
    <string name="verb_commonality">Frequency: Show verbs that are…</string>
    <string name="very_common">Very common</string>
    <string name="common">Common +</string>
    <string name="somewhat_common">Kinda common +</string>
    <string name="uncommon">uncommon +</string>

    <string name="time_and_count_options">Time and Count</string>
    <string name="time_switch_option">Time</string>
    <string name="count_switch_option">Count</string>
    <string name="time_spinner_label">Time:</string>
    <string name="count_spinner_label">Count:</string>

    <string name="third_person_options">3rd Person Settings</string>
    <string name="set_enabled_third_person">Set Enabled 3rd Person</string>
    <string name="vc">Você</string>
    <string name="ele_ela">Ele/Ela</string>
    <string name="senhor">O senhor/A senhora</string>
    <string name="vcs">Vocês</string>
    <string name="eles_elas" tools:ignore="Typos">Eles/Elas</string>
    <string name="senhores">Os senhores/As senhoras</string>

    <string name="wordsearch_grid_size">Wordsearch Grid Size</string>
    <string name="size">Size:</string>

    <string-array name="wordsearch_grid_size_array">
        <item>8 x 8</item>
        <item>10 x 10</item>
        <item>12 x 12</item>
        <item>14 x 14</item>
    </string-array>

    <string-array name="times_array">
        <item>1:00</item>
        <item>3:00</item>
        <item>5:00</item>
        <item>7:00</item>
        <item>10:00</item>
    </string-array>

    <string-array name="counts_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
