<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:stretchColumns="*"
    android:shrinkColumns="*">

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/presIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:text="@string/present" />

            <CheckBox
                android:id="@+id/impeIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:text="@string/imperfect" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/pretIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:text="@string/preterite" />

            <CheckBox
                android:id="@+id/plupIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:text="@string/simple_pluperfect" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/futuIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:text="@string/future" />
            <CheckBox
                android:id="@+id/futuSimpIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:text="@string/simple_future" />

        </TableRow>
        <TableRow android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/condIndCheckbox"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:text="@string/conditional" />

        </TableRow>
    </TableLayout>